two way data binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-exm-property-binding></app-exm-property-binding> -->
-<app-exm-event-binding></app-exm-event-binding>
+<!-- <app-exm-event-binding></app-exm-event-binding> -->
+<app-exm-twdb></app-exm-twdb>
