Attribute Directive: ngStyle, ngClass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-exm-property-binding></app-exm-property-binding> -->
 <!-- <app-exm-event-binding></app-exm-event-binding> -->
-<app-exm-twdb></app-exm-twdb>
+<!-- <app-exm-twdb></app-exm-twdb> -->
+<app-exm-attribute-directive></app-exm-attribute-directive>
