Structural Directive: *ngIf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-exm-property-binding></app-exm-property-binding> -->
 <!-- <app-exm-event-binding></app-exm-event-binding> -->
 <!-- <app-exm-twdb></app-exm-twdb> -->
-<app-exm-attribute-directive></app-exm-attribute-directive>
+<!-- <app-exm-attribute-directive></app-exm-attribute-directive> -->
+<app-exm-structural-directive></app-exm-structural-directive>
