structural directive:ngFor

--- a/src/app/learning/exm-structural-directive/exm-structural-directive.component.css
+++ b/src/app/learning/exm-structural-directive/exm-structural-directive.component.css
@@ -1,4 +1,11 @@
-.structural-directive{
+.structural-directive-ngIf{
+    width: 300px;
+    background-color: aqua;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.structural-directive-ngFor{
     height: 200px;
     width: 300px;
     background-color: aqua;
