--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-exm-event-binding></app-exm-event-binding> -->
 <!-- <app-exm-twdb></app-exm-twdb> -->
 <!-- <app-exm-attribute-directive></app-exm-attribute-directive> -->
-<app-exm-structural-directive></app-exm-structural-directive>
+<!-- <app-exm-structural-directive></app-exm-structural-directive> -->
+<app-exm-parent></app-exm-parent>
