@input and @output

--- a/src/app/learning/exm-parent/exm-child/exm-child.component.html
+++ b/src/app/learning/exm-parent/exm-child/exm-child.component.html
@@ -1,4 +1,5 @@
 <div class="child-comp">
     <p>Child Component</p>
     <p>Input From Parent: {{ipData}}</p>
+    <button (click)="uploadDatatoParent()">Send data to parent</button>
 </div>
