Sibling component communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!-- <app-exm-twdb></app-exm-twdb> -->
 <!-- <app-exm-attribute-directive></app-exm-attribute-directive> -->
 <!-- <app-exm-structural-directive></app-exm-structural-directive> -->
-<app-exm-parent></app-exm-parent>
+<!-- <app-exm-parent></app-exm-parent> -->
+<app-exm-sibings-communication></app-exm-sibings-communication>
