template ref variable for html element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <!-- <app-exm-attribute-directive></app-exm-attribute-directive> -->
 <!-- <app-exm-structural-directive></app-exm-structural-directive> -->
 <!-- <app-exm-parent></app-exm-parent> -->
-<app-exm-sibings-communication></app-exm-sibings-communication>
+<!-- <app-exm-sibings-communication></app-exm-sibings-communication> -->
+<app-exm-template-ref></app-exm-template-ref>
